[tool.poetry]
name = "gracefully"
version = "0.1.0"
description = ""
authors = ["ToshinoriTakahashi <dr.t.takahashi.0917@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
